# robot-articulation-control

./: CMakeLists.txt  Cargo.toml  README.md  main.c  rotary_encoder.c  stepper_motor_driver.c  stepper_motor_driver.h
.cargo/: config.toml
.github/workflows/: rust.yml
inc/: stepper_control.h  stepper_driver.h
old/arduinoMega2560/: ramps_1_4_stepper_tests.ino
old/inc/: encoder.h  stepper_control.h
old/pic_controllers/pic18f4550/: stepper_motor_driver.c  timer.c  timer.h
old/src/: stepper_control.c  test.c
pic_controllers/: README.md
pic_controllers/pic18f4550/: main.h  rotary_encoder.h
rac-control/: Cargo.toml
rac-control/src/: lib.rs
rac-core/: Cargo.toml
rac-core/src/: articulation.rs  encoder.rs  knode.rs  lib.rs  stepper.rs
rac-host/: Cargo.toml
rac-host/src/: articulation.rs  kcontroller.rs  lib.rs
rac-protocol/: Cargo.toml
rac-protocol/src/: knode_protocol.rs  lib.rs
src/: articulation.rs  encoder.c  encoder.rs  knode.rs  knode_protocol.rs  lib.rs  main.rs  math.rs  stepper.rs  stepper_driver.c  test.c
